# ExploreDotnetNativeAOT

./: README.md
hello_dart/: pubspec.yaml
hello_dotnet5/: Program.cs  hello_dotnet5.csproj
hello_go/: hello.go
hello_rust/: Cargo.toml
hello_rust/src/: main.rs
