[package]
name = "hello_rust"
version = "0.1.0"
authors = ["klcantrell <cantrellkalalau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.10", features = ["blocking"] }
rand = "0.8.0"
